# todo-egui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  bump-version.ps1  cliff.toml  data.json  default.json  mywork.json
.github/workflows/: ci.yml  deploy.yml  machete.yml  typos.yml
scripts/: bump-version.ps1  bump-version.sh
src/: data.rs  main.rs  test.rs  ui_test.rs  utils.rs
src/test/: mod.rs  ui_test.rs
src/ui/: mod.rs  statusbar.rs
