[package]
name = "todo-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
eframe = { version = "0.29.1", features = ["persistence"] }
egui = { version = "0.29.1", features = ["persistence"] }
egui-notify = "0.17.0"
egui-phosphor = "0.7.3"
egui_file = "0.19.0"
once_cell = "1.20.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
perf = { level = "deny", priority = 3 }
style = { level = "deny", priority = 4 }
unwrap_used = { level = "deny", priority = 5 }
expect_used = { level = "deny", priority = 6 }
module_name_repetitions = { level = "allow", priority = 7 }
cast_precision_loss = { level = "allow", priority = 8 }
cast_possible_truncation = { level = "allow", priority = 9 }
cast_sign_loss = { level = "allow", priority = 10 }
out_of_bounds_indexing = { level = "allow", priority = 11 }
