[package]
name = "todo-egui"
description = "A small TODO app using egui"
repository = "https://github.com/bircni/todo-egui"
version = "0.1.1"
authors = ["bircni"]
edition = "2024"
license = "MIT"
readme = "README.md"
categories = ["gui"]
keywords = ["todo", "egui"]

[dependencies]
anyhow = "1"
eframe = { version = "0.31", features = ["persistence"] }
egui = { version = "0.31", features = ["persistence"] }
egui-notify = "0.19"
egui-phosphor = "0.9"
egui_extras = { version = "0.31.1", features = ["image"] }
egui_file = "0.22"
log = "0.4.27"
open = "5.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12.2"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dev-dependencies]
egui_kittest = { version = "0.31", features = ["wgpu", "snapshot"] }
eframe = { version = "0.31", features = ["wgpu"] }
tokio = { version = "1.41.0", features = ["time", "rt", "macros"] }
wgpu = "25"

[build-dependencies]
regex = "1.11"

[lints.rust]
unsafe_code = "deny"
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"
nursery = "warn"

# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
clone_on_ref_ptr = "warn"
expect_used = "warn"
missing_assert_message = "warn"
panic_in_result_fn = "warn"
str_to_string = "warn"
todo = "warn"
unwrap_used = "warn"
unimplemented = "warn"
wildcard_enum_match_arm = "warn"
